# pharos

./: .gitignore  .kiroignore  ACTUAL_PIPELINE_STATUS.md  AGENTS.md  AUTHENTICATION_ENABLED.md  AUTHENTICATION_FIXED.md  AUTHENTICATION_FIX_REQUIRED.md  AUTHENTICATION_WORKING.md  BACKEND_REORGANIZATION_COMPLETE.md  BRUTAL_HONEST_ASSESSMENT.md  CLEANUP_TARGETS.md  DEMO_MODE_REMOVED.md  DEPLOYMENT_COMPLETE.md  DEPLOY_NOW.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  FASTAPI_INGESTION_SUCCESS.md  FRONTEND_GAP_ANALYSIS_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INGESTION_PIPELINE_COMPLETE.md  LICENSE  LINUX_INGESTION_STATUS.md  MONITORING_FIX_SUMMARY.md  NOTEBOOKLM_UPDATE_2026_05_02.md  PHASE4_100_PERCENT_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_FINAL_COMPLETE.md  PHASE_1_2_IMPLEMENTATION_COMPLETE.md  PORTFOLIO_CLEANUP_COMPLETE.md  PROMPT_FOR_OPUS.md  QUICK_FIX_REFERENCE.md  README.md  READY_TO_DEPLOY.md  RELIABILITY_IMPROVEMENTS_SUMMARY.md  REORGANIZATION_SUMMARY.md  SEARCH_CLOUD_MODE_FIX.md  SEARCH_EMBEDDING_FIX.md  SEARCH_FINAL_FIX_SUMMARY.md  SEARCH_FIX_DEPLOYMENT.md  TAILSCALE_FUNNEL_SUCCESS.md  TEST_RESULTS.md  (+15 more)
pharos-cli/: .gitignore  LICENSE  README.md  example_annotation_usage.py  new_commands.txt  pyproject.toml  test_debug2.py  test_debug3.py
pharos-cli/.github/workflows/: ci.yml
pharos-cli/docs/: SECURITY.md  authentication.md  cheat-sheet.md  command-reference.md  configuration.md  faq.md  installation.md  man-pages.md  scripting-guide.md  shell-completion.md  troubleshooting.md  tutorial-batch-operations.md  tutorial-ci-cd.md  tutorial-getting-started.md  usage-patterns.md  workflows.md
pharos-cli/docs/examples/: README.md  analyze_codebase.sh  backup_and_cleanup.sh  batch_operations.sh  find_similar.sh  generate_report.sh  import_project.sh  (+1 more)
pharos-cli/pharos_cli/: __init__.py  __main__.py  cli.py  version.py
pharos-cli/scripts/: install_completion.sh  release.sh
pharos-cli/tests/: __init__.py  conftest.py  test_annotation_client.py  test_auth.py  test_chat_command.py  test_client.py  test_code_client.py  test_collection_client.py  test_collection_commands.py  test_color.py  test_completion.py  test_config.py  test_formatters.py  test_graph_client.py  test_keyring.py  test_quality_client.py  test_rag_client.py  test_recommendation_client.py  test_resource_client.py  test_resource_commands.py  test_search_client.py  test_system_client.py  test_taxonomy_client.py
(+667 files in other folders)
